k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: demo
  name: demo-frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: k8s-demo-backend
        image: k8s-demo-backend
        ports:
        - containerPort: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: demo
  name: demo-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: k8s-demo-frontend
        image: k8s-demo-frontend
        ports:
        - containerPort: 80
